welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: ')' expected but 'if' found.
	if (negative && a<0 && b<0){
        ^posNeg:7: error: ';' expected but 'return' found.
	}return false
         ^